--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@netlify/functions": "^2.6.0",
     "@netlify/remix-adapter": "^2.3.1",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
     "@portabletext/react": "^3.0.9",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@remix-run/node": "^2.9.2",
+    "@remix-run/react": "^2.9.2",
+    "@remix-run/serve": "^2.9.2",
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tremor/react": "^3.17.2",
@@ -35,17 +35,18 @@
     "react-toastify": "^10.0.5",
     "remix-utils": "^7.6.0",
     "resend": "^3.2.0",
+    "spin-delay": "^2.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^9.0.0",
